# football-analysis

./: pyproject.toml  version-comparison.ipynb
fifa17/: fifa17-data-analysis.ipynb  fifa17-data-show.ipynb  fifa17-overall.ipynb  fifa17-potential.ipynb  fifa17-xgboost-test.ipynb
fifa20/: fifa20-tensorflow-show.ipynb
