[tool.poetry]
name = "football-analysis"
version = "0.1.0"
description = ""
authors = ["André Cardoso <andremacardoso@ua.pt>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.4"
pandas = "^1.4.2"
seaborn = "^0.11.2"
xgboost = "^1.6.1"
scikit-learn = "^1.1.1"
ipykernel = "^6.15.0"
graphviz = "^0.20"
tensorflow = "^2.9.1"
keras-tuner = "^1.1.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
